

add_executable(seq_list 01_Seq_list/main.c
        01_Seq_list/seq_list.c
        01_Seq_list/seq_list.h)
add_executable(link_list 01_Link_list/main.c
        01_Link_list/link_list.c
                01_Link_list/link_list.h
            )
add_executable(circularList 03_LoopLink_list/circularlist.c
)
add_executable(Joseph 03_LoopLink_list/Joseph.c)







