add_executable(binaryTree 01_BinaryTree/binarytree.c
        01_BinaryTree/binarytree.h
        01_BinaryTree/main.c
)
add_executable( ThreadTree 02_ThreadBTree/main.c
                            02_ThreadBTree/threadBTree.c
                            02_ThreadBTree/threadBTree.h
)

add_executable(binarySearchTree
        03_BinarySearchTree/binarySearchTree.c
        03_BinarySearchTree/binarySearchTree.h
        03_BinarySearchTree/main.c
)
add_executable(AVL
        04_AVLTree/AvlTree.h
        04_AVLTree/AvlTree.c
        04_AVLTree/main.c
)
add_executable(QuickFindUnion
        05_Union_Find/main.c
        05_Union_Find/quickFind.c
        05_Union_Find/quickFind.h
        05_Union_Find/quickUnion.c
        05_Union_Find/quickUnion.h
)