


add_executable(01_AdjacentMatrix 01_AdjacentMatrix/main.c
        01_AdjacentMatrix/adjacentMatrix.c
        01_AdjacentMatrix/adjacentMatrix.h

)
add_executable(02_Adjacent_List 02_Adjacent_List/main.c
        02_Adjacent_List/adjacentList.c
        02_Adjacent_List/adjacentList.h
)

add_executable(03_CrossLinker 03_CrossLinker/main.c
                                03_CrossLinker/crossLinker.c
                                03_CrossLinker/crossLinker.h
)
add_executable(04_Adjacent_Multi_List 04_Adjacent_Multi_List/main.c
        04_Adjacent_Multi_List/adjacencyMultiList.c
        04_Adjacent_Multi_List/adjacencyMultiList.h
)
